--- a/app/src/main/res/layout/activity_customer_login_register.xml
+++ b/app/src/main/res/layout/activity_customer_login_register.xml
@@ -62,6 +62,17 @@
         android:layout_margin="10dp"
         android:gravity="center"/>
 
+    <TextView
+        android:id="@+id/tvlogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Already registered? Login here..."
+        android:textSize="20dp"
+        android:textColor="#000"
+        android:layout_below="@id/btnlogin"
+        android:layout_margin="10dp"
+        android:gravity="center"/>
+
     <Button
         android:id="@+id/btnregister"
         android:layout_width="match_parent"
