--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -31,7 +31,7 @@
             android:id="@+id/btncustomer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="I'AM A CUSTOMER"
+            android:text="I'M A CUSTOMER"
             android:textSize="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
